--- a/class-2020-02-13.Rmd
+++ b/class-2020-02-13.Rmd
@@ -7,35 +7,23 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 
 library(readxl)
-library(janitory)
+library(janitor)
 library(tidyverse)
 library(dplyr)
+library(reprex)
+library(gt)
 ```
 ```{r code}
 x <- read_excel("class_enrollment_summary_by_term_2.13.20.xlsx", 
-                skip = 3)
+                skip = 3) %>%
+    clean_names() %>%
+    filter(course_department == "Government") %>%
+    arrange(desc(total)) %>%
+    slice (1:5) %>%
+    select(course_name, total)
 
+
+x
+ 
 ```
 
-
-
-
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
