--- a/class-2020-02-13.Rmd
+++ b/class-2020-02-13.Rmd
@@ -4,7 +4,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 
 library(readxl)
 library(janitor)
@@ -13,17 +13,18 @@ library(dplyr)
 library(reprex)
 library(gt)
 ```
-```{r code}
+```{r code }
+
 x <- read_excel("class_enrollment_summary_by_term_2.13.20.xlsx", 
                 skip = 3) %>%
     clean_names() %>%
     filter(course_department == "Government") %>%
     arrange(desc(total)) %>%
     slice (1:5) %>%
-    select(course_name, total)
-
+    select(course_title, course_name, instructor_full_name, total) %>%
+    gt() %>%
+      tab_header("Top Five Government Classes")
 
 x
- 
 ```
 
